# coveo-pokemon-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  ruff.toml
.claude/: mcp.json  settings.json
.github/workflows/: closed-loop-daily.yml  deploy-grafana-dashboard.yml  pr-checks.yml  rga-eval-daily.yml
atomic-search/: README.md  index.html  package-lock.json  package.json  pokemon.html  vite.config.js
config/: README.md  fields.json  scraping_config.json
docs/: api-keys.md  caching-strategy.md  deploy.md  detail-page.md  mcp-integration.md  ml-models.md  observability.md  passage-retrieval.md  rga-eval-methodology.md  rga-prompt.md
eval-runs/: 2026-05-31-full.json  2026-05-31-smoke.json  2026-06-01-full.json  2026-06-02-full.json  2026-06-03-full.json  2026-06-04-full.json  2026-06-05-full.json  2026-06-06-full.json  2026-06-07-full.json  2026-06-08-full.json  2026-06-09-full.json  2026-06-10-full.json  2026-06-11-full.json  2026-06-12-full.json  2026-06-13-full.json  2026-06-14-full.json
observability/: grafana-dashboard.json
push-pokemon/: pyproject.toml
push-pokemon/src/: filter.py  main.py  pokeapi.py  push.py  transform.py
push-pokemon/tests/: test_transform.py
rga-closed-loop/: README.md  pyproject.toml
rga-closed-loop/prompts/: pokemon-rga.yaml
rga-closed-loop/prompts/history/: 2026-05-31-default.yaml  2026-06-01-pre-analyzer-v1.yaml
rga-closed-loop/src/: analyzer.py  apply.py  closed_loop_run.py  guardrails.py  schemas.py
rga-closed-loop/tests/: test_analyzer.py  test_apply.py  test_guardrails.py  test_schemas.py
rga-dashboard/: index.html  package-lock.json  package.json
rga-eval/: pyproject.toml
rga-eval/golden/: questions.json
rga-eval/src/: coveo_rga.py  llm_judge.py  main.py  metrics.py  publish.py  schemas.py  show.py
rga-eval/tests/: test_schemas.py
scripts/: README.md  add_mappings.sh  bootstrap.sh  rebuild_source.sh  update_scraping_config.sh  validate_api_keys.sh  validate_org_features.sh  widen_source.sh
tests/: README.md  conftest.py  pyproject.toml  test_dual_source_separation.py  test_facet_counts.py  test_field_extraction.py  test_index_audit.py  test_rga_readiness.py  test_search_queries.py  test_url_set_parity.py
(+87 files in other folders)
