[project]
name = "pokemondb-push"
version = "0.1.0"
description = "Python pipeline: PokéAPI form variants → Coveo Push API → Source B (pokemondb-push)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",  # mock httpx calls in tests without hitting real APIs
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
