[project]
name = "rga-closed-loop"
version = "0.1.0"
description = "Closed-loop RGA prompt-tuning (Phase 6F). Layer 1: apply.py PUTs the prompt to Coveo's /machinelearning/models endpoint. Layer 2 (analyzer + pr-opener): coming in 6F.3."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",  # httpx mock transport for unit tests — no live Coveo calls
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
