[project]
name = "rga-eval"
version = "0.1.0"
description = "Daily quality evaluator for the Coveo RGA pipeline. Streams answers from /answer/v1/configs/{id}/generate, scores them against a 100-question golden dataset, and writes time-series JSON to eval-runs/ for the dashboard."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
