[project]
name = "coveo-pokemon-challenge-tests"
version = "0.1.0"
description = "Integration tests for the Coveo Pokemon Challenge org"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "lxml>=5.0",
    "cssselect>=1.2",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["."]
